updated html message box

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 						<h3> Contact Me</h3>
 						<form action="https://formspree.io/kevk87@gmail.com" method="POST">
 						    <input type="email" name="_replyto" placeholder="Your email">
-						    <textarea name="message" placeholder="Message"></textarea>
+						    <textarea name="message" type="text" placeholder="Message"></textarea>
 						    <input type="submit" value="Send">
 						</form>
 					</div>
