--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 							<!-- Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper.  --></p>
 						<div class="resume">
-							<a href="resume.pdf"> <i class="fa fa-file-text-o fa-5x" aria-hidden="true"></i>Resume </a>
+							<a href="img/resume.pdf"> <i class="fa fa-file-text-o fa-5x" aria-hidden="true"></i>Resume </a>
 							<a href="#" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>Linkedin</a>
 						</div>
 					</div>
