--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 
 							<!-- Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper.  --></p>
 						<div class="resume">
-							<a href="img/resume.pdf"> <i class="fa fa-file-text-o fa-5x" aria-hidden="true"></i>Resume </a>
-							<a href="#" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>Linkedin</a>
+							<a href="img/resume.pdf" target="_blank"> <i class="fa fa-file-text-o fa-5x" aria-hidden="true"></i>Resume </a>
+							<a href="https://www.linkedin.com/in/kevin-ku/" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>Linkedin</a>
 						</div>
 					</div>
 					<img src="img/test.jpg">
@@ -170,10 +170,10 @@
 						</form>
 					</div>
 					<div class="icons">
-							<a href="#" target=""><i class="fa fa-envelope-o fa-5x"  aria-hidden="true"></i></a>
-							<a href="#" target="https://www.youtube.com" ><i class="fa fa-youtube fa-5x" aria-hidden="true"></i></a>
-							<a href="#" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-							<a href="#" target="https://www.github.com"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
+							<a href="https://www.pexels.com/u/kevin-ku-92347/" target="_blank"><i class="fa fa-camera-retro fa-5x" aria-hidden="true"></i></a>
+							<a href="https://www.youtube.com/channel/UCkZqjJJOujzWJ552iqYG3KQ" target="_blank" ><i class="fa fa-youtube fa-5x" aria-hidden="true"></i></a>
+							<a href="https://www.linkedin.com/in/kevin-ku/" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
+							<a href="https://github.com/kevk87" target="_blank"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
 
 
 							<!-- <a href="https://www.google.com"><img src="svg_assets/001-gmail.svg"></a> --> 
