--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700" rel="stylesheet"> -->
 </head>
 <body>
-<!-- 	<div class="grid">
+	<div class="grid">
 		<div class="title">Title</div>
 		<div class="header">Header</div>
 		<div class="sidebar">Sidebar</div>
 		<div class="content">Content</div>
-		<div class="footer">Footer</div> -->
+		<div class="footer">Footer</div>
 
 		<div class="grid">
 				<nav class="mobile_menu">
