lazy loading iframe updated

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 				
 				<div class="overlay_container item-one">
 						<div class="overlay">
-							<iframe src="https://www.youtube.com/embed/JgRvVMZxVgU"></iframe>
+							<div class="wrapper2">
+								<div class="youtube" data-embed="JgRvVMZxVgU">
+									<div class="play-button"></div>
+								</div>
+							</div>
 						</div>
 						<div class="screen project_01"> 
 							<h3> Imagine Dragon Spec Commerical </h3>
@@ -56,7 +60,11 @@
 				</div>
 				<div class="overlay_container item-one">
 						<div class="overlay">
-							<iframe src="https://www.youtube.com/embed/lQoDEgBAEzk"></iframe>
+							<div class="wrapper2">
+								<div class="youtube" data-embed="lQoDEgBAEzk">
+									<div class="play-button"></div>
+								</div>
+							</div>
 						</div>
 						<div class="screen project_02"> 
 							<h3> Green Flash Beer Spec Commercial </h3>
@@ -65,7 +73,11 @@
 				</div>
 				<div class="overlay_container item-one">
 						<div class="overlay">
-							<iframe src="https://www.youtube.com/embed/qUW2kme2Kug"></iframe>
+							<div class="wrapper2">
+								<div class="youtube" data-embed="qUW2kme2Kug">
+									<div class="play-button"></div>
+								</div>
+							</div>
 						</div>
 						<div class="screen project_03"> 
 							<h3> Everlast Spec Commercial </h3>
@@ -76,7 +88,11 @@
 				</div>
 				<div class="overlay_container item-one">
 						<div class="overlay">
-							<iframe src="https://www.youtube.com/embed/LPUilzljaAI"></iframe>
+							<div class="wrapper2">
+								<div class="youtube" data-embed="LPUilzljaAI">
+									<div class="play-button"></div>
+								</div>
+							</div>
 						</div>
 						<div class="screen project_04"> 
 							<h3> New York Trip</h3>
@@ -88,7 +104,12 @@
 <!-- 	=============================================== -->
 				<div class="overlay_container item-two">
 						<div class="overlay">
-							<iframe src="https://www.youtube.com/embed/wARtmQWYN28"></iframe>
+							<div class="wrapper2">
+								<div class="youtube" data-embed="wARtmQWYN28">
+									<div class="play-button"></div>
+								</div>
+							</div>
+						
 						</div>
 						<div class="screen project_05"> 
 							<h3> Mosayec Design Process </h3> 
@@ -97,7 +118,11 @@
 				</div>
 				<div class="overlay_container item-two">
 						<div class="overlay">
-							<iframe src="https://www.youtube.com/embed/kodrBHfiKxk"></iframe>
+							<div class="wrapper2">
+								<div class="youtube" data-embed="kodrBHfiKxk">
+									<div class="play-button"></div>
+								</div>
+							</div>
 						</div>
 						<div class="screen project_06"> 
 							<h3> Mosayec Demo Prototypes</h3>
