--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<div class="screen project_08"> 
 							<h3> Calculator </h3>
 								<a href="https://github.com/kevk87/calculator" target="_blank"> Github </a>
-								<a href="calulator/index2.html" target="_blank">Demo</a>
+								<a href="calculator/index2.html" target="_blank">Demo</a>
 						</div>
 				</div>
 
