updated description title

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							</div>
 						</div>
 						<div class="screen project_01"> 
-							<h3> Imagine Dragon Spec Commerical </h3>
+							<h3> Imagine Dragon Contest Submission Music Video </h3>
 							<div class="modal" data-navigation-item="1"> Watch Video </div> 
 						</div>
 				</div>
@@ -113,6 +113,7 @@
 						</div>
 						<div class="screen project_05"> 
 							<h3> Mosayec Design Process </h3> 
+							<p> Role: UX Designer/Researcher</p> 
 							<div class="modal" data-navigation-item="5"> Watch Video </div> 
 						</div>
 				</div>
@@ -126,6 +127,7 @@
 						</div>
 						<div class="screen project_06"> 
 							<h3> Mosayec Demo Prototypes</h3>
+							<p> Role: UX Designer/Researcher</p> 
 							<div class="modal" data-navigation-item="6"> Watch Video </div> 
 						</div>
 				</div>
@@ -137,7 +139,9 @@
 							</div>
 						</div>
 						<div class="screen project_07"> 
-							<h3> Beo Educational Website </h3>			
+							<h3> Beo Educational Website </h3>
+							<p> Role: Web Developer HTML/CSS/Jquery</p> 
+							<p> Desktop Application </p>
 								<a href="https://github.com/tabtsai/BeoWebsite" target="_blank"> Github </a>
 								<a href="BeoWebsite/index.html" target="_blank">Demo</a>
 						</div>
@@ -151,6 +155,8 @@
 						</div>
 						<div class="screen project_08"> 
 							<h3> Calculator </h3>
+							<p> Role: Web Developer HTML/CSS/Jquery</p> 	
+							<p> Desktop Application </p> 
 								<a href="https://github.com/kevk87/calculator" target="_blank"> Github </a>
 								<a href="calculator/index2.html" target="_blank">Demo</a>
 						</div>
