updated media screens

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700" rel="stylesheet">
 </head>
 <body>
@@ -58,11 +58,14 @@
 								</div>
 							</div>
 						</div>
+						<div class="file">
+							<a href = "https://drive.google.com/file/d/1ihS9ITTvCGL3T5968QMaZ1E5TPQF6t6F/view" target="_blank"> Download File (Google Drive) </a>
+							<p> Empty Template (no music or stock video included) </p>
+						</div>
 						<div class="screen project_01"> 
 							<h3> Sports Promo Template </h3>
-							<a href = "https://drive.google.com/file/d/1ihS9ITTvCGL3T5968QMaZ1E5TPQF6t6F/view?usp=sharing"> File </a>
-
 							<div class="modal" data-navigation-item="1"> Watch Video </div> 
+							<a href = "https://drive.google.com/file/d/1ihS9ITTvCGL3T5968QMaZ1E5TPQF6t6F/view" target="_blank"> Download File </a>
 						</div>
 				</div>
 				<div class="overlay_container item-one">
@@ -73,9 +76,14 @@
 								</div>
 							</div>
 						</div>
+						<div class="file">
+							<a href = "https://drive.google.com/file/d/12U8iKIUfiITNRWUVpcxuDRrRlV94LdzU/view" target="_blank"> Download File (Google Drive) </a>
+							<p> Empty Template (no music or stock images included) </p>
+						</div>
 						<div class="screen project_02"> 
 							<h3> Slick Promo Template </h3>
-							<div class="modal" data-navigation-item="2"> Watch Video </div>  
+							<div class="modal" data-navigation-item="2"> Watch Video </div> 
+							<a href = "https://drive.google.com/file/d/12U8iKIUfiITNRWUVpcxuDRrRlV94LdzU/view" target="_blank"> Download File </a> 
 						</div>
 				</div>
 				<div class="overlay_container item-one">
@@ -86,11 +94,16 @@
 								</div>
 							</div>
 						</div>
+						<div class="file">
+							<a href = "https://drive.google.com/file/d/1Vr6xvp0Y9h6wMM0sU_uARODIVJcoc_Pg/view" target="_blank"> Download File (Google Drive) </a>
+							<p> Empty Template (no music or stock video included) </p>
+						</div>
 						<div class="screen project_03"> 
 							<h3> Event Promo Template </h3>
 							<div class="modal" data-navigation-item="3"> 
 								Watch Video
-							</div>  
+							</div>
+							<a href = "https://drive.google.com/file/d/1Vr6xvp0Y9h6wMM0sU_uARODIVJcoc_Pg/view" target="_blank"> Download File </a>  
 						</div>
 				</div>
 				<div class="overlay_container item-one">
@@ -101,11 +114,16 @@
 								</div>
 							</div>
 						</div>
+						<div class="file">
+							<a href = "https://drive.google.com/file/d/1ZWplmwvwK8KF16Uwau_eMxFQpeKl8xVv/view" target="_blank"> Download File (Google Drive) </a>
+							<p> Empty Template (no music or stock images included) </p>
+						</div>
 						<div class="screen project_04"> 
 							<h3> Real Estate Template</h3>
 							<div class="modal" data-navigation-item="4"> 
 								Watch Video
-							</div>  
+							</div> 
+							<a href = "https://drive.google.com/file/d/1ZWplmwvwK8KF16Uwau_eMxFQpeKl8xVv/view" target="_blank"> Download File </a> 
 						</div>
 				</div>
 
