updated lower thirds modal

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						</div>
 						<div class="screen project_01"> 
 							<h3> Lower Thirds Template </h3>
-							<div class="modal" data-navigation-item="1"> Watch Video </div> 
+							<div class="modal" data-navigation-item="12"> Watch Video </div> 
 							<a href = "https://drive.google.com/file/d/1RF-xTrksGGdCZSrTSstdUJVL1wH0kXrW/view" target="_blank"> Download File </a>
 						</div>
 				</div>
@@ -385,6 +385,10 @@
 			<div class="modal_popup11 popup_window hidden">
 				<div class="close_window"> X </div>
 				<iframe src="https://www.youtube.com/embed/Y4mVstTEtTQ"></iframe>
+			</div>
+			<div class="modal_popup12 popup_window hidden">
+				<div class="close_window"> X </div>
+				<iframe src="https://www.youtube.com/embed/EuhJHlAWR_w"></iframe>
 			</div>
 
 
