--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
 <!-- 
 	AE Templates
 	====================================================================== -->
+				<div class="overlay_container item-one">
+						<div class="overlay">
+							<div class="wrapper2">
+								<div class="youtube" data-embed="gZ2VFOboq5g">
+									<div class="play-button"></div>
+								</div>
+							</div>
+						</div>
+						<div class="file">
+							<a href = "https://drive.google.com/file/d/1RF-xTrksGGdCZSrTSstdUJVL1wH0kXrW/view" target="_blank"> Download File (Google Drive) AE files only </a>
+						</div>
+						<div class="screen project_01"> 
+							<h3> Free Special Effects Template (Practice) </h3>
+							<div class="modal" data-navigation-item="12"> Watch Video </div> 
+							<a href = "https://drive.google.com/file/d/10T4MkNgDSdos27WFkKzixPZ2dYMwHcsv/view" target="_blank"> Download File </a>
+						</div>
+				</div>
+
 
 				<div class="overlay_container item-one">
 						<div class="overlay">
@@ -61,7 +79,7 @@
 						<div class="file">
 							<a href = "https://drive.google.com/file/d/1RF-xTrksGGdCZSrTSstdUJVL1wH0kXrW/view" target="_blank"> Download File (Google Drive) </a>
 						</div>
-						<div class="screen project_01"> 
+						<div class="screen project_02"> 
 							<h3> Lower Thirds Template </h3>
 							<div class="modal" data-navigation-item="12"> Watch Video </div> 
 							<a href = "https://drive.google.com/file/d/1RF-xTrksGGdCZSrTSstdUJVL1wH0kXrW/view" target="_blank"> Download File </a>
@@ -81,7 +99,7 @@
 							<a href = "https://drive.google.com/file/d/1ihS9ITTvCGL3T5968QMaZ1E5TPQF6t6F/view" target="_blank"> Download File (Google Drive) </a>
 							<p> Empty Template (no music or stock video included) </p>
 						</div>
-						<div class="screen project_02"> 
+						<div class="screen project_03"> 
 							<h3> Sports Promo Template </h3>
 							<div class="modal" data-navigation-item="1"> Watch Video </div> 
 							<a href = "https://drive.google.com/file/d/1ihS9ITTvCGL3T5968QMaZ1E5TPQF6t6F/view" target="_blank"> Download File </a>
@@ -99,7 +117,7 @@
 							<a href = "https://drive.google.com/file/d/12U8iKIUfiITNRWUVpcxuDRrRlV94LdzU/view" target="_blank"> Download File (Google Drive) </a>
 							<p> Empty Template (no music or stock images included) </p>
 						</div>
-						<div class="screen project_03"> 
+						<div class="screen project_04"> 
 							<h3> Slick Promo Template </h3>
 							<div class="modal" data-navigation-item="2"> Watch Video </div> 
 							<a href = "https://drive.google.com/file/d/12U8iKIUfiITNRWUVpcxuDRrRlV94LdzU/view" target="_blank"> Download File </a> 
@@ -117,7 +135,7 @@
 							<a href = "https://drive.google.com/file/d/1Vr6xvp0Y9h6wMM0sU_uARODIVJcoc_Pg/view" target="_blank"> Download File (Google Drive) </a>
 							<p> Empty Template (no music or stock video included) </p>
 						</div>
-						<div class="screen project_04"> 
+						<div class="screen project_05"> 
 							<h3> Event Promo Template </h3>
 							<div class="modal" data-navigation-item="3"> 
 								Watch Video
@@ -137,7 +155,7 @@
 							<a href = "https://drive.google.com/file/d/1ZWplmwvwK8KF16Uwau_eMxFQpeKl8xVv/view" target="_blank"> Download File (Google Drive) </a>
 							<p> Empty Template (no music or stock images included) </p>
 						</div>
-						<div class="screen project_05"> 
+						<div class="screen project_06"> 
 							<h3> Real Estate Template</h3>
 							<div class="modal" data-navigation-item="4"> 
 								Watch Video
@@ -156,7 +174,7 @@
 							</div>
 						
 						</div>
-						<div class="screen project_06"> 
+						<div class="screen project_07"> 
 							<h3> Mosayec Design Process </h3> 
 							<p> Role: UX Designer/Researcher</p> 
 							<div class="modal" data-navigation-item="5"> Watch Video </div> 
@@ -170,7 +188,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_07"> 
+						<div class="screen project_08"> 
 							<h3> Mosayec Demo Prototypes</h3>
 							<p> Role: UX Designer/Researcher</p> 
 							<div class="modal" data-navigation-item="6"> Watch Video </div> 
@@ -183,7 +201,7 @@
 								<a href="BeoWebsite/index.html" target="_blank">Demo</a>
 							</div>
 						</div>
-						<div class="screen project_08"> 
+						<div class="screen project_09"> 
 							<h3> Beo Educational Website </h3>
 							<p> Role: Web Developer HTML/CSS/Jquery</p> 
 							<p> Desktop Application </p>
@@ -198,7 +216,7 @@
 								<a href="calculator/index2.html" target="_blank">Demo</a>
 							</div>
 						</div>
-						<div class="screen project_09"> 
+						<div class="screen project_10"> 
 							<h3> Calculator </h3>
 							<p> Role: Web Developer HTML/CSS/Jquery</p> 	
 							<p> Desktop Application </p> 
@@ -217,7 +235,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_10"> 
+						<div class="screen project_11"> 
 							<h3> Imagine Dragon Contest Submission Music Video </h3>
 							<div class="modal" data-navigation-item="7"> Watch Video </div> 
 						</div>
@@ -230,7 +248,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_11"> 
+						<div class="screen project_12"> 
 							<h3> Green Flash Beer Spec Commercial </h3>
 							<div class="modal" data-navigation-item="8"> Watch Video </div>  
 						</div>
@@ -238,13 +256,13 @@
 				<div class="overlay_container item-three">
 						<div class="overlay">
 							<div class="wrapper2">
-								<div class="youtube" data-embed="qUW2kme2Kug">
+								<div class="youtube" data-embed="_Xdcc5vHwsw">
 									<div class="play-button"></div>
 								</div>
 							</div>
 						</div>
-						<div class="screen project_12"> 
-							<h3> Everlast Spec Commercial </h3>
+						<div class="screen project_13"> 
+							<h3> Cinema4D Title Projects </h3>
 							<div class="modal" data-navigation-item="9"> 
 								Watch Video
 							</div>  
@@ -258,7 +276,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_13"> 
+						<div class="screen project_14"> 
 							<h3> New York Trip</h3>
 							<div class="modal" data-navigation-item="10"> 
 								Watch Video
@@ -273,7 +291,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_14"> 
+						<div class="screen project_15"> 
 							<h3> Cousin John Chicago</h3>
 							<div class="modal" data-navigation-item="11"> 
 								Watch Video
@@ -344,49 +362,53 @@
 			<div class="background_modal"></div>
 			<div class="modal_popup1 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/gTiaTi3A2IU"></iframe>				
+				<iframe src="https://www.youtube.com/embed/gZ2VFOboq5g"></iframe>				
 			</div>
 			<div class="modal_popup2 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/unPGnftEHNs"></iframe>			
+				<iframe src="https://www.youtube.com/embed/gTiaTi3A2IU"></iframe>				
 			</div>
 			<div class="modal_popup3 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/jcK_lzBlQfo"></iframe>				
+				<iframe src="https://www.youtube.com/embed/unPGnftEHNs"></iframe>			
 			</div>
 			<div class="modal_popup4 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/IDts3Bi35DU"></iframe>
+				<iframe src="https://www.youtube.com/embed/jcK_lzBlQfo"></iframe>				
 			</div>
 			<div class="modal_popup5 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/wARtmQWYN28"></iframe>
+				<iframe src="https://www.youtube.com/embed/IDts3Bi35DU"></iframe>
 			</div>
 			<div class="modal_popup6 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/kodrBHfiKxk"></iframe>
+				<iframe src="https://www.youtube.com/embed/wARtmQWYN28"></iframe>
 			</div>
 			<div class="modal_popup7 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/JgRvVMZxVgU"></iframe>				
+				<iframe src="https://www.youtube.com/embed/kodrBHfiKxk"></iframe>
 			</div>
 			<div class="modal_popup8 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/lQoDEgBAEzk"></iframe>			
+				<iframe src="https://www.youtube.com/embed/JgRvVMZxVgU"></iframe>				
 			</div>
 			<div class="modal_popup9 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/qUW2kme2Kug"></iframe>				
+				<iframe src="https://www.youtube.com/embed/lQoDEgBAEzk"></iframe>			
 			</div>
 			<div class="modal_popup10 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/LPUilzljaAI"></iframe>
+				<iframe src="https://www.youtube.com/embed/_Xdcc5vHwsw"></iframe>				
 			</div>
 			<div class="modal_popup11 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/Y4mVstTEtTQ"></iframe>
+				<iframe src="https://www.youtube.com/embed/LPUilzljaAI"></iframe>
 			</div>
 			<div class="modal_popup12 popup_window hidden">
+				<div class="close_window"> X </div>
+				<iframe src="https://www.youtube.com/embed/Y4mVstTEtTQ"></iframe>
+			</div>
+			<div class="modal_popup13 popup_window hidden">
 				<div class="close_window"> X </div>
 				<iframe src="https://www.youtube.com/embed/EuhJHlAWR_w"></iframe>
 			</div>
