--- a/index.html
+++ b/index.html
@@ -52,6 +52,42 @@
 				<div class="overlay_container item-one">
 						<div class="overlay">
 							<div class="wrapper2">
+								<div class="youtube" data-embed="0T79wIlJBbU">
+									<div class="play-button"></div>
+								</div>
+							</div>
+						</div>
+						<div class="file">
+							<a href = "https://drive.google.com/open?id=1fyv7DGnF-YVDzHe14MrQIzuZrpK31ntm" target="_blank"> Download File (Google Drive) AE files only </a>
+						</div>
+						<div class="screen project_01"> 
+							<h3> Free Dynamic Template </h3>
+							<div class="modal" data-navigation-item="1"> Watch Video </div> 
+							<a href = "https://drive.google.com/open?id=1fyv7DGnF-YVDzHe14MrQIzuZrpK31ntm" target="_blank"> Download File </a>
+						</div>
+				</div>
+
+				<div class="overlay_container item-one">
+						<div class="overlay">
+							<div class="wrapper2">
+								<div class="youtube" data-embed="c5SDvReAYUE">
+									<div class="play-button"></div>
+								</div>
+							</div>
+						</div>
+						<div class="file">
+							<a href = "https://drive.google.com/open?id=1OGhgqNAsbYk3UAM2Cn8-sFd4ipHc1oR7" target="_blank"> Download File (Google Drive) AE files only </a>
+						</div>
+						<div class="screen project_02"> 
+							<h3> Free Design Elements Template </h3>
+							<div class="modal" data-navigation-item="2"> Watch Video </div> 
+							<a href = "https://drive.google.com/open?id=1OGhgqNAsbYk3UAM2Cn8-sFd4ipHc1oR7" target="_blank"> Download File </a>
+						</div>
+				</div>
+
+				<div class="overlay_container item-one">
+						<div class="overlay">
+							<div class="wrapper2">
 								<div class="youtube" data-embed="gZ2VFOboq5g">
 									<div class="play-button"></div>
 								</div>
@@ -60,9 +96,9 @@
 						<div class="file">
 							<a href = "https://drive.google.com/file/d/10T4MkNgDSdos27WFkKzixPZ2dYMwHcsv/view" target="_blank"> Download File (Google Drive) AE files only </a>
 						</div>
-						<div class="screen project_01"> 
+						<div class="screen project_03"> 
 							<h3> Free Special Effects Template (Practice) </h3>
-							<div class="modal" data-navigation-item="1"> Watch Video </div> 
+							<div class="modal" data-navigation-item="3"> Watch Video </div> 
 							<a href = "https://drive.google.com/file/d/10T4MkNgDSdos27WFkKzixPZ2dYMwHcsv/view" target="_blank"> Download File </a>
 						</div>
 				</div>
@@ -79,9 +115,9 @@
 						<div class="file">
 							<a href = "https://drive.google.com/file/d/1RF-xTrksGGdCZSrTSstdUJVL1wH0kXrW/view" target="_blank"> Download File (Google Drive) </a>
 						</div>
-						<div class="screen project_02"> 
+						<div class="screen project_04"> 
 							<h3> Lower Thirds Template </h3>
-							<div class="modal" data-navigation-item="2"> Watch Video </div> 
+							<div class="modal" data-navigation-item="4"> Watch Video </div> 
 							<a href = "https://drive.google.com/file/d/1RF-xTrksGGdCZSrTSstdUJVL1wH0kXrW/view" target="_blank"> Download File </a>
 						</div>
 				</div>
@@ -99,9 +135,9 @@
 							<a href = "https://drive.google.com/file/d/1ihS9ITTvCGL3T5968QMaZ1E5TPQF6t6F/view" target="_blank"> Download File (Google Drive) </a>
 							<p> Empty Template (no music or stock video included) </p>
 						</div>
-						<div class="screen project_03"> 
+						<div class="screen project_05"> 
 							<h3> Sports Promo Template </h3>
-							<div class="modal" data-navigation-item="3"> Watch Video </div> 
+							<div class="modal" data-navigation-item="5"> Watch Video </div> 
 							<a href = "https://drive.google.com/file/d/1ihS9ITTvCGL3T5968QMaZ1E5TPQF6t6F/view" target="_blank"> Download File </a>
 						</div>
 				</div>
@@ -117,9 +153,9 @@
 							<a href = "https://drive.google.com/file/d/12U8iKIUfiITNRWUVpcxuDRrRlV94LdzU/view" target="_blank"> Download File (Google Drive) </a>
 							<p> Empty Template (no music or stock images included) </p>
 						</div>
-						<div class="screen project_04"> 
+						<div class="screen project_06"> 
 							<h3> Slick Promo Template </h3>
-							<div class="modal" data-navigation-item="4"> Watch Video </div> 
+							<div class="modal" data-navigation-item="6"> Watch Video </div> 
 							<a href = "https://drive.google.com/file/d/12U8iKIUfiITNRWUVpcxuDRrRlV94LdzU/view" target="_blank"> Download File </a> 
 						</div>
 				</div>
@@ -135,9 +171,9 @@
 							<a href = "https://drive.google.com/file/d/1Vr6xvp0Y9h6wMM0sU_uARODIVJcoc_Pg/view" target="_blank"> Download File (Google Drive) </a>
 							<p> Empty Template (no music or stock video included) </p>
 						</div>
-						<div class="screen project_05"> 
+						<div class="screen project_07"> 
 							<h3> Event Promo Template </h3>
-							<div class="modal" data-navigation-item="5"> 
+							<div class="modal" data-navigation-item="7"> 
 								Watch Video
 							</div>
 							<a href = "https://drive.google.com/file/d/1Vr6xvp0Y9h6wMM0sU_uARODIVJcoc_Pg/view" target="_blank"> Download File </a>  
@@ -155,9 +191,9 @@
 							<a href = "https://drive.google.com/file/d/1ZWplmwvwK8KF16Uwau_eMxFQpeKl8xVv/view" target="_blank"> Download File (Google Drive) </a>
 							<p> Empty Template (no music or stock images included) </p>
 						</div>
-						<div class="screen project_06"> 
+						<div class="screen project_08"> 
 							<h3> Real Estate Template</h3>
-							<div class="modal" data-navigation-item="6"> 
+							<div class="modal" data-navigation-item="8"> 
 								Watch Video
 							</div> 
 							<a href = "https://drive.google.com/file/d/1ZWplmwvwK8KF16Uwau_eMxFQpeKl8xVv/view" target="_blank"> Download File </a> 
@@ -174,10 +210,10 @@
 							</div>
 						
 						</div>
-						<div class="screen project_07"> 
+						<div class="screen project_09"> 
 							<h3> Mosayec Design Process </h3> 
 							<p> Role: UX Designer/Researcher</p> 
-							<div class="modal" data-navigation-item="7"> Watch Video </div> 
+							<div class="modal" data-navigation-item="9"> Watch Video </div> 
 						</div>
 				</div>
 				<div class="overlay_container item-two">
@@ -188,10 +224,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_08"> 
+						<div class="screen project_10"> 
 							<h3> Mosayec Demo Prototypes</h3>
 							<p> Role: UX Designer/Researcher</p> 
-							<div class="modal" data-navigation-item="8"> Watch Video </div> 
+							<div class="modal" data-navigation-item="10"> Watch Video </div> 
 						</div>
 				</div>
 				<div class="overlay_container item-two">
@@ -201,7 +237,7 @@
 								<a href="BeoWebsite/index.html" target="_blank">Demo</a>
 							</div>
 						</div>
-						<div class="screen project_09"> 
+						<div class="screen project_11"> 
 							<h3> Beo Educational Website </h3>
 							<p> Role: Web Developer HTML/CSS/Jquery</p> 
 							<p> Desktop Application </p>
@@ -216,7 +252,7 @@
 								<a href="calculator/index2.html" target="_blank">Demo</a>
 							</div>
 						</div>
-						<div class="screen project_10"> 
+						<div class="screen project_12"> 
 							<h3> Calculator </h3>
 							<p> Role: Web Developer HTML/CSS/Jquery</p> 	
 							<p> Desktop Application </p> 
@@ -235,9 +271,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_11"> 
+						<div class="screen project_13"> 
 							<h3> Imagine Dragon Contest Submission Music Video </h3>
-							<div class="modal" data-navigation-item="9"> Watch Video </div> 
+							<div class="modal" data-navigation-item="11"> Watch Video </div> 
 						</div>
 				</div>
 				<div class="overlay_container item-three">
@@ -248,9 +284,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_12"> 
+						<div class="screen project_14"> 
 							<h3> Green Flash Beer Spec Commercial </h3>
-							<div class="modal" data-navigation-item="10"> Watch Video </div>  
+							<div class="modal" data-navigation-item="12"> Watch Video </div>  
 						</div>
 				</div>
 				<div class="overlay_container item-three">
@@ -261,9 +297,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_13"> 
+						<div class="screen project_15"> 
 							<h3> Cinema4D Title Projects </h3>
-							<div class="modal" data-navigation-item="11"> 
+							<div class="modal" data-navigation-item="13"> 
 								Watch Video
 							</div>  
 						</div>
@@ -276,9 +312,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_14"> 
+						<div class="screen project_16"> 
 							<h3> New York Trip</h3>
-							<div class="modal" data-navigation-item="12"> 
+							<div class="modal" data-navigation-item="14"> 
 								Watch Video
 							</div>  
 						</div>
@@ -291,9 +327,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="screen project_15"> 
+						<div class="screen project_17"> 
 							<h3> Cousin John Chicago</h3>
-							<div class="modal" data-navigation-item="13"> 
+							<div class="modal" data-navigation-item="15"> 
 								Watch Video
 							</div>  
 						</div>
@@ -362,57 +398,66 @@
 			<div class="background_modal"></div>
 			<div class="modal_popup1 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/gZ2VFOboq5g"></iframe>				
+				<iframe src="https://www.youtube.com/embed/0T79wIlJBbU"></iframe>				
 			</div>
 			<div class="modal_popup2 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/EuhJHlAWR_w"></iframe>				
+				<iframe src="https://www.youtube.com/embed/c5SDvReAYUE"></iframe>				
 			</div>
 			<div class="modal_popup3 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/gTiaTi3A2IU"></iframe>				
+				<iframe src="https://www.youtube.com/embed/gZ2VFOboq5g"></iframe>				
 			</div>
+	
 			<div class="modal_popup4 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/unPGnftEHNs"></iframe>			
+				<iframe src="https://www.youtube.com/embed/EuhJHlAWR_w"></iframe>				
 			</div>
 			<div class="modal_popup5 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/jcK_lzBlQfo"></iframe>				
+				<iframe src="https://www.youtube.com/embed/gTiaTi3A2IU"></iframe>				
 			</div>
 			<div class="modal_popup6 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/IDts3Bi35DU"></iframe>
+				<iframe src="https://www.youtube.com/embed/unPGnftEHNs"></iframe>			
 			</div>
 			<div class="modal_popup7 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/wARtmQWYN28"></iframe>
+				<iframe src="https://www.youtube.com/embed/jcK_lzBlQfo"></iframe>				
 			</div>
 			<div class="modal_popup8 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/kodrBHfiKxk"></iframe>
+				<iframe src="https://www.youtube.com/embed/IDts3Bi35DU"></iframe>
 			</div>
 			<div class="modal_popup9 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/JgRvVMZxVgU"></iframe>				
+				<iframe src="https://www.youtube.com/embed/wARtmQWYN28"></iframe>
 			</div>
 			<div class="modal_popup10 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/lQoDEgBAEzk"></iframe>			
+				<iframe src="https://www.youtube.com/embed/kodrBHfiKxk"></iframe>
 			</div>
 			<div class="modal_popup11 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/_Xdcc5vHwsw"></iframe>				
+				<iframe src="https://www.youtube.com/embed/JgRvVMZxVgU"></iframe>				
 			</div>
 			<div class="modal_popup12 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/LPUilzljaAI"></iframe>
+				<iframe src="https://www.youtube.com/embed/lQoDEgBAEzk"></iframe>			
 			</div>
 			<div class="modal_popup13 popup_window hidden">
 				<div class="close_window"> X </div>
-				<iframe src="https://www.youtube.com/embed/Y4mVstTEtTQ"></iframe>
+				<iframe src="https://www.youtube.com/embed/_Xdcc5vHwsw"></iframe>				
 			</div>
 			<div class="modal_popup14 popup_window hidden">
+				<div class="close_window"> X </div>
+				<iframe src="https://www.youtube.com/embed/LPUilzljaAI"></iframe>
+			</div>
+			<div class="modal_popup15 popup_window hidden">
+				<div class="close_window"> X </div>
+				<iframe src="https://www.youtube.com/embed/Y4mVstTEtTQ"></iframe>
+			</div>
+			<div class="modal_popup16 popup_window hidden">
 				<div class="close_window"> X </div>
 				<iframe src="https://www.youtube.com/embed/EuhJHlAWR_w"></iframe>
 			</div>
