--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="header_container"> 
 					<h1> Hello! </h1>
 					<h2> My name is Kevin Ku </h2>
-					<p> I am a Multimedia Specialist </p>
+					<p> I am a Content Specialist </p>
 			</div>
 			<div class="video_container section-2">
 				<h2> Projects </h2>
