--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 						<p>
 							I love to create content on the web.  My primary focus at the moment is creating video. I worked as an IT guy for several years, learning everything I can from network security to back-end servers.  I decided to jump ship and learn more of the creative side of IT by combining art with tech.</p>
 						<div class="resume">
-							<a href="img/resume.pdf" target="_blank"> <i class="fa fa-file-text-o fa-5x" aria-hidden="true"></i>Resume </a>
+							<a href="/" target="_blank"> <i class="fa fa-file-text-o fa-5x" aria-hidden="true"></i>Resume </a>
 							<a href="https://www.linkedin.com/in/kevin-ku/" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>Linkedin</a>
 						</div>
 					</div>
